# ai-master

./: .env.example  .gitignore  Makefile  PLAN.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
apps/api/: .env.example  alembic.ini
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 0001_initial.py  202509271257_initial.py  202509271319_asset_name.py
apps/api/app/: main.py
apps/api/app/core/: auth.py  db.py  entities_hub.py  rabbit.py  s3.py  settings.py
apps/api/app/core/utils/: assets.py
apps/api/app/features/assets/: __init__.py  dto.py  entities.py  router.py  schemas.py  service.py
apps/api/app/features/auth/: router.py
apps/api/app/features/health/: router.py
apps/api/app/features/jobs/: router.py  schemas.py  service.py
apps/api/app/features/mastering/: __init__.py  dto.py  entities.py  router.py  schemas.py  service.py
apps/api/app/features/realtime/: __init__.py  events.py  websocket.py
apps/api/app/features/tracks/: entities.py
apps/api/app/features/uploads/: router.py  (+2 more)
apps/web/: .env.example  middleware.ts  next.config.ts  package-lock.json  package.json
apps/web/app/: layout.tsx  page.tsx  react-query-client-provider.tsx
apps/web/app/(protected)/: AuthWrapper.tsx  layout.tsx
apps/web/app/(public)/: page.tsx
apps/web/app/components/: AbAudioPlayer.tsx
apps/web/app/hooks/: useAuth.ts
apps/web/components/: HomePage.tsx
apps/web/utils/: routes.ts
apps/worker/: .env.example
apps/worker/worker/: main.py
apps/worker/worker/core/: s3.py  settings.py
apps/worker/worker/providers/: files.py
(+4 files in other folders)
